--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     window.onload = function () {
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
-        url: "./swagger.json?",
+        url: "./swagger.json?71a678f",
         dom_id: '#swagger-ui',
         deepLinking: true,
         displayRequestDuration: true,
